--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,1 +1,11 @@
-# Defaultni config
+sql:
+  hostname: host
+  port: 3306
+  database: database
+  username: user
+  password: password
+settings:
+  minimumConnections: 2
+  maximumConnections: 5
+  timeout: 30000
+  poolname: CraftLibs
