--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,16 @@
 plugins {
     id 'java'
+    id "org.ajoberstar.grgit" version "1.7.0"
 }
 
 apply plugin: 'java'
 apply plugin: 'maven'
 
-group 'cz.craftmania.libs'
-version '1.0.0'
+group 'cz.craftmania.craftlibs'
+
+def mainVersion = '1.0.0'
+def branch = "?"
+def gitId = ""
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -15,6 +19,32 @@ targetCompatibility = 1.8
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
+
+ext {
+    try {
+        git = org.ajoberstar.grgit.Grgit.open(file(".git"))
+        date = git.head().date.format("yy.MM.dd")
+        //gitId = "-${git.head().abbreviatedId}"
+        gitId = "-SNAPSHOT"
+    } catch (Throwable ignore) {
+        gitId = "-unknown"
+    }
+    try {
+        git = org.ajoberstar.grgit.Grgit.open(file(".git"))
+        date = git.head().date.format("yy.MM.dd")
+        branch = "-${git.branch.current.fullName}".replace("refs/heads/", "")
+        print(branch)
+        if (branch.toString().equalsIgnoreCase("-master") || branch.toString().equalsIgnoreCase("-head")) {
+            branch = ""
+            gitId = ""
+        }
+    } catch (Throwable ignore) {
+        branch = "-unknown"
+    }
+}
+
+// Name-master-76735d.jar
+version = mainVersion + branch + gitId
 
 clean { delete "./target" }
 clean { delete "./build" }
@@ -25,6 +55,29 @@ repositories {
     maven { url "https://hub.spigotmc.org/nexus/content/repositories/snapshots/" }
 }
 
+processResources {
+    from('src/main/resources') {
+        include 'plugin.yml'
+        expand(
+                version: version
+        )
+    }
+}
+
+task compilePlugin(type: Jar) {
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives sourcesJar
+}
+
 dependencies {
     compileOnly ('org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT') {
         exclude group: 'net.md-5'
@@ -32,7 +85,15 @@ dependencies {
     compile group: 'com.zaxxer', name: 'HikariCP', version: '2.6.1'
 }
 
-task compilePlugin(type: Jar) {
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
-    with jar
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: "${nexusUrl}/repository/release") {
+                authentication(userName: nexusUsername, password: nexusPassword)
+            }
+            snapshotRepository(url: "${nexusUrl}/repository/snapshots") {
+                authentication(userName: nexusUsername, password: nexusPassword)
+            }
+        }
+    }
 }
