Oprava confirmaction v plugin.yml <:zabickaZbran:695761485724385341>

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,6 @@ name: CraftLibs
 version: ${version}
 author: Nerdy42
 main: cz.craftmania.craftlibs.CraftLibs
+commands:
+  confirmaction:
+    usage: /confirmaction <id>
