--- a/.github/workflows/deploy-packages.yml
+++ b/.github/workflows/deploy-packages.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      GPR_USER: ${{ secrets.GPR_USER }}
+      GPR_TOKEN: ${{ secrets.GPR_TOKEN }}
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 11
@@ -15,9 +18,6 @@ jobs:
         with:
           java-version: 11
       - name: Build plugin
-        run: ./gradlew compilePlugin
+        run: ./gradlew compilePlugin -PGPR_USER=$GPR_USER -PGPR_TOKEN=$GPR_TOKEN
       - name: Deploy action
-        env:
-          PACKAGES_USER: ${{ secrets.PACKAGES_USER }}
-          PACKAGES_PASSWORD: ${{ secrets.PACKAGES_PASSWORD }}
-        run: ./gradlew uploadArchives -PnexusUsername=$PACKAGES_USER -PnexusPassword=$PACKAGES_PASSWORD
+        run: ./gradlew publish -PGPR_USER=$GPR_USER -PGPR_TOKEN=$GPR_TOKEN
