--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     compile group: 'com.zaxxer', name: 'HikariCP', version: '2.6.1'
     compile 'io.sentry:sentry:1.7.30'
     compile 'io.sentry:sentry-log4j2:1.7.30'
+    compile 'org.jetbrains:annotations:16.0.2'
     compile group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.30'
 
     implementation "jakarta.xml.bind:jakarta.xml.bind-api:2.3.2"
