--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
 include:
   - project: 'craftmania/gitlab/gitlab-ci-templates'
-    file: '/gitlab-ci-base-java.yml'
+    file: '/gitlab-ci-base-java-shadow.yml'
     ref: main
