Fix: Oprava chybějící api-version

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: CraftLibs
 version: ${version}
 author: Nerdy42
 main: cz.craftmania.craftlibs.CraftLibs
+api-version: 1.16
 commands:
   confirmaction:
     usage: /confirmaction <id>
