--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 plugins {
-    id 'java'
     id "org.ajoberstar.grgit" version "1.7.0"
     id 'com.github.johnrengelman.shadow' version '7.0.0'
+    id 'org.jetbrains.kotlin.jvm' version '1.6.20'
 }
 
-apply plugin: 'java'
+apply plugin: 'kotlin'
+apply plugin: 'java-library'
 apply plugin: 'maven-publish'
 
 group 'cz.craftmania.craftlibs'
