--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,8 @@ apply plugin: 'maven-publish'
 group 'cz.craftmania.craftlibs'
 def mainVersion = '1.1.13'
 
-sourceCompatibility = 11
-targetCompatibility = 11
+sourceCompatibility = 17
+targetCompatibility = 17
 
 // Nastaveni UTF
 tasks.withType(JavaCompile) {
@@ -52,16 +52,14 @@ artifacts {
 }
 
 dependencies {
-    compileOnly ('com.destroystokyo.paper:paper-api:1.16.2-R0.1-SNAPSHOT')
-    compileOnly ('org.spigotmc:spigot-api:1.16.4-R0.1-SNAPSHOT') {
-        exclude group: 'net.md-5'
-    }
+    compileOnly ('io.papermc.paper:paper-api:1.19.2-R0.1-SNAPSHOT')
 
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '2.6.1'
     implementation 'io.sentry:sentry:1.7.30'
     implementation 'io.sentry:sentry-log4j2:1.7.30'
     implementation 'org.jetbrains:annotations:16.0.2'
     implementation group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.30'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
 
     compileOnly "jakarta.xml.bind:jakarta.xml.bind-api:2.3.2"
 }
