--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,12 +10,12 @@ jobs:
       GPR_TOKEN: ${{ secrets.GPR_TOKEN }}
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 17
+      - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
-          java-version: 17
+          java-version: 11
       - name: Build plugin
-        run: ./gradlew shadowJar -PGPR_USER=$GPR_USER -PGPR_TOKEN=$GPR_TOKEN
+        run: ./gradlew compilePlugin -PGPR_USER=$GPR_USER -PGPR_TOKEN=$GPR_TOKEN
       - name: Upload artifacts
         uses: actions/upload-artifact@v1
         with:
