--- a/.github/workflows/deploy-packages.yml
+++ b/.github/workflows/deploy-packages.yml
@@ -13,11 +13,11 @@ jobs:
       GPR_TOKEN: ${{ secrets.GPR_TOKEN }}
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 17
+      - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
-          java-version: 17
+          java-version: 11
       - name: Build plugin
-        run: ./gradlew shadowJar -PGPR_USER=$GPR_USER -PGPR_TOKEN=$GPR_TOKEN
+        run: ./gradlew compilePlugin -PGPR_USER=$GPR_USER -PGPR_TOKEN=$GPR_TOKEN
       - name: Deploy action
         run: ./gradlew publish -PGPR_USER=$GPR_USER -PGPR_TOKEN=$GPR_TOKEN
