--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           java-version: 11
       - name: Build plugin
-        run: ./gradlew compilePlugin -PGPR_USER=$GPR_USER -PGPR_TOKEN=$GPR_TOKEN
+        run: ./gradlew shadowJar -PGPR_USER=$GPR_USER -PGPR_TOKEN=$GPR_TOKEN
       - name: Upload artifacts
         uses: actions/upload-artifact@v1
         with:
