--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ apply plugin: 'java'
 apply plugin: 'maven-publish'
 
 group 'cz.craftmania.craftlibs'
-def mainVersion = '1.1.16'
+def mainVersion = '1.1.17'
 
 sourceCompatibility = 17
 targetCompatibility = 17
@@ -74,8 +74,8 @@ publishing {
         }
     }
     publications {
-        shadow(MavenPublication) { publication ->
-            project.shadow.component(publication)
+        gpr(MavenPublication) {
+            from(components.java)
         }
     }
 }
